# Meat_Boy

./: .gitignore  CMakeLists.txt  README.md  pre-commit.sh
Data/Levels/: Level1.json  Level2.json
src/: main.cpp
src/game_representation/: CONSTANTS.cpp  CONSTANTS.h  ConcreteFactory.cpp  ConcreteFactory.h  ConcreteWall.cpp  ConcreteWall.h  Data.cpp  Data.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  GirlGoal.cpp  GirlGoal.h  Goal.cpp  Goal.h  Level.cpp  Level.h  LevelState.cpp  LevelState.h  LevelsContext.cpp  LevelsContext.h  MeatBoy.cpp  MeatBoy.h  MenuState.cpp  MenuState.h  Player.cpp  Player.h  Score.cpp  Score.h  SimpleWall.cpp  SimpleWall.h  State.cpp  State.h  StateManager.cpp  StateManager.h  Wall.cpp  Wall.h  Window.cpp  Window.h
src/logic_library/: AbstractFactory.cpp  AbstractFactory.h  CONSTANTS.cpp  CONSTANTS.h  Camera.cpp  Camera.h  ConcreteWall.cpp  ConcreteWall.h  EVENT.h  EntityModel.cpp  EntityModel.h  GirlGoal.cpp  GirlGoal.h  Goal.cpp  Goal.h  INPUT.h  MeatBoy.cpp  MeatBoy.h  Observer.cpp  Observer.h  Player.cpp  Player.h  Random.cpp  Random.h  Score.cpp  Score.h  SimpleWall.cpp  SimpleWall.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  Wall.cpp  Wall.h  World.cpp  World.h
